edited particles page and comment out project 5-8

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="https://github.com/gladwyn/healthcare_analysis/blob/main/healthcare_analysis.ipynb" target="_blank" class="project-link">Check it Out - jupyer notebook</a>
           </div>
           <!--project 5-->
-           <div class="project-container  project-card data application">
+          <!-- <div class="project-container  project-card data application">
           <img
               src="assets/img/rush00.png"
               alt="Rush00"
@@ -199,11 +199,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 This is a team project created using c and developed during 42 priscine (Rush00).
                 Language used :Git and C.
                 Due to confidentality, please email to access it.
-            </p>
+            </p>-->
           <!--<a href="https://github.com/gladwyn/healthcare_analysis/blob/main/healthcare_analysis.ipynb" target="_blank" class="project-link">Check it Out - jupyer notebook</a>-->
-          </div>
+         <!-- </div>-->
            <!--project 6-->
-           <div class="project-container  project-card data application">
+          <!-- <div class="project-container  project-card data application">
           <img
               src="assets/img/rush00.png"
               alt="Rush00"
@@ -214,11 +214,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p class="project-details">
                 This is a team project created using c and developed during 42 priscine (Rush01).
                 Due to confidentality, please email to access it.
-            </p>
+            </p>-->
           <!--<a href="https://github.com/gladwyn/healthcare_analysis/blob/main/healthcare_analysis.ipynb" target="_blank" class="project-link">Check it Out - jupyer notebook</a> -->
-          </div>
+         <!-- </div> -->
           <!--project 7-->
-           <div class="project-container  project-card data application">
+          <!-- <div class="project-container  project-card data application">
           <img
               src="assets/img/rush01.png"
               alt="Rush00"
@@ -229,11 +229,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p class="project-details">
                 This is a team project created using c and developed during 42 priscine (Rush02).
                 Due to confidentality, please email to access it.
-            </p>
+            </p> -->
           <!--<a href="https://github.com/gladwyn/healthcare_analysis/blob/main/healthcare_analysis.ipynb" target="_blank" class="project-link">Check it Out - jupyer notebook</a>-->
-          </div>
+          <!--</div>-->
            <!--project 8-->
-          <div class="project-container  project-card data application">
+          <!--<div class="project-container  project-card data application">
           <img
               src="assets/img/bsq.png"
               alt="Rush00"
@@ -244,9 +244,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p class="project-details">
                 This is a pair project created using c and developed during 42 priscine (BSQ).
                 Due to confidentality, please email to access it.
-            </p>
+            </p> -->
           <!--<a href="https://github.com/gladwyn/healthcare_analysis/blob/main/healthcare_analysis.ipynb" target="_blank" class="project-link">Check it Out - jupyer notebook</a>-->
-          </div>
+          <!--</div>-->
         </div>
         <!--end of project-->
         </div>
