--- a/particle_animation.html
+++ b/particle_animation.html
@@ -36,7 +36,7 @@
 </div>
 
 <!-- scripts -->
-<script src="particles.js"></script>
+<script src="js/particles.js"></script>
 <script src="js/app.js"></script>
 
 <!-- stats.js -->
