--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         &nbsp;
                        &nbsp;
                     <h4  class="projects-title text-center"  id="skills">Proficiency Of The Programming Language</h4>
-              <div class="projects-containers">
+              <div class="projects-container">
                                  <img src="assets/img/Your paragraph text.png" alt="..." style="margin-left: auto;margin-right: auto; display: block;" />
               </div>
                     &nbsp;
