add more fade in

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                          <ul class="text-white-50">
                             <li class="fade-in">Google Data analytics Professional Course</li>
                             <li class="fade-in">Google Cybersecurity Professional Course</li>
-                            <li>Calculus for Machine Learning and Data Science</li>
+                            <li class="fade-in">Calculus for Machine Learning and Data Science</li>
                             <li class="fade-in">42 Singapore Pinscine</li>
                             <li class="fade-in">specialist dipolma in AI solution and development (TP)</li>
                         </ul>
