edited project details

--- a/index.html
+++ b/index.html
@@ -196,10 +196,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               loading="lazy"
               class="project-pic"
             />
-            <h3 class="project-title ">Corner Printer </h3>
+            <h3 class="project-title ">Rectangle Generator</h3>
             <p class="project-details">
                 This is a team project created using c and developed during 42 priscine (Rush00).
-                Language used :Git and C.
+                Language used :Git and C. A C project from 42’s Piscine, 
+                where me and my team implemented an application to dynamically generate rectangles of varying sizes. 
+                The project reinforces core programming concepts such as functions, loops and conditions.
+                After the rush , i attempted to do the bonuses.
                 Due to confidentality, please email to access it.
             </p>
           <!--<a href="https://github.com/gladwyn/healthcare_analysis/blob/main/healthcare_analysis.ipynb" target="_blank" class="project-link">Check it Out - jupyer notebook</a>-->
@@ -215,6 +218,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3 class="project-title ">Skyscrapper solver </h3>
             <p class="project-details">
                 This is a team project created using c and developed during 42 priscine (Rush01).
+                Implemented a backtracking algorithm in C to solve the Skyscraper puzzle, 
+                a logic-based grid game where numbers represent building heights and clues indicate how many are visible from each direction. 
+                The project emphasizes constraint satisfaction, recursion, and efficient search strategies.
+                After the rush , i attempted to do the bonuses, and i learn concepts like early pruning and Progation constraints.
                 Due to confidentality, please email to access it.
             </p>
           <!--<a href="https://github.com/gladwyn/healthcare_analysis/blob/main/healthcare_analysis.ipynb" target="_blank" class="project-link">Check it Out - jupyer notebook</a> -->
@@ -230,6 +237,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3 class="project-title ">Number Dictonary </h3>
             <p class="project-details">
                 This is a team project created using c and developed during 42 priscine (Rush02).
+                a program that converts numeric input into its written form using a customizable dictionary.
+                The project involved parsing files, handling memory allocation, 
+                and managing error cases for invalid inputs or dictionary issues
                 Due to confidentality, please email to access it.
             </p>
           <!--<a href="https://github.com/gladwyn/healthcare_analysis/blob/main/healthcare_analysis.ipynb" target="_blank" class="project-link">Check it Out - jupyer notebook</a>-->
@@ -244,7 +254,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             />
             <h3 class="project-title ">Finding biggest square</h3>
             <p class="project-details">
-                This is a pair project created using c and developed during 42 priscine (BSQ).
+                This is a pair project created using c and developed for 42 priscine (BSQ).
+                Altough, i never attempted this project, i try it myself after the BSQ.
+                A C program that finds the largest square that can fit in a map while avoiding obstacles. 
+                It reads map files, identifies the biggest empty square area, and marks it with "full" characters. 
+                The program handles multiple files and includes error checking for invalid maps.
                 Due to confidentality, please email to access it.
             </p> 
           <!--<a href="https://github.com/gladwyn/healthcare_analysis/blob/main/healthcare_analysis.ipynb" target="_blank" class="project-link">Check it Out - jupyer notebook</a>-->
