--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                        &nbsp;
         <div class="projects-containers">
             <!--project 1-->
-          <div class="project-container  project-card application">
+         <div class="project-container  project-card application">
           
             <img
               src="assets/img/resturant-booking.jpg"
@@ -261,6 +261,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </p> 
           <a href="https://github.com/gladwyn/42-piscine-project" target="_blank" class="project-link">Check it Out</a>
           </div>
+           <!--project 9-->
+          <div class="project-container  project-card application">
+          <img
+              src="assets/img/bsq.png"
+              alt="Rush00"
+              loading="lazy"
+              class="project-pic"
+            />
+            <h3 class="project-title ">Venue indicator</h3>
+            <p class="project-details">
+                Tired of frantically checking maps, missing important beginnings, or guiding lost guests? 
+                Venue Indicator is the sophisticated yet simple solution designed to eliminate the stress of event travel and ensure you never miss a moment.
+            </p> 
+          <a href="https://github.com/gladwyn/sip-project" target="_blank" class="project-link">Check it Out</a>
+          </div>
 
         </div>
         <!--end of project-->
@@ -268,7 +283,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
         </section>
           &nbsp;
-                       &nbsp;
+        &nbsp;
         <!--course-->
         <section class="signup-section" id="signup">
             <div class="container px-4 px-lg-5">
