change pics for project 9

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
            <!--project 9-->
           <div class="project-container  project-card application">
           <img
-              src="assets/img/bg_01.png"
+              src="assets/img/bg-01.png"
               alt="Rush00"
               loading="lazy"
               class="project-pic"
