--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 As more restaurants incorporate digital transformation, online restaurant booking is becoming increasingly prevalent. 
                 With just one click, customers can order food without the hassle of physically going to the restaurant or calling to make reservations. 
                 As a part of my school project, I have developed a prototype of a restaurant reservation application that allows users to view and test the application's functionality.
+                This project is still working in progress.
             </p>
          <a href="https://github.com/gladwyn/restaurant_ordering_prototype" target="_blank" class="project-link">Check it Out</a>
         </div>
@@ -271,8 +272,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             />
             <h3 class="project-title ">Venue indicator</h3>
             <p class="project-details">
-                Tired of frantically checking maps, missing important beginnings, or guiding lost guests? 
-                Venue Indicator is the sophisticated yet simple solution designed to eliminate the stress of event travel and ensure you never miss a moment.
+                Feeling lost in the 1st day of orientation, or do not know where to go or which class you are in? 
+                Venue Indicator is the sophisticated yet simple solution designed to eliminate the stress.
+                Coded using PHP, HTML, CSS,MYSQL and JS with some intergated of bootstrap library and xampp.
+                
             </p> 
           <a href="https://github.com/gladwyn/sip-project" target="_blank" class="project-link">Check it Out</a>
           </div>
