--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 Venue Indicator is the sophisticated yet simple solution designed to eliminate the stress.
                 Coded using PHP, HTML, CSS,MYSQL and JS with some intergated of bootstrap library and xampp.
             </p> 
-          <a href="https://github.com/gladwyn/sip-project" target="_blank" class="project-link">Check it Out</a>
+          <a href="https://github.com/gladwyn/sip-project" target="_blank" class="project-link">Check Out git repo</a>
+          <a href="https://sip.42web.io/" target="_blank" class="project-link">Check Out Working webite</a>
         </div>
       
         <!--project 2-->
