edit more about me

--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             I also got my first hands-on experience with Generative AI (GenAI) and saw how it can help me developed VBA code(s) and improve how things get done in the workplace.
                         </p>
                         <p class="text-white-50 fade-in">
-                            More recently, I completed the 42 Piscine on 15 August 2025 — a challenging and intensive coding program that really pushed me to think critically and solve problems creatively. 
-                            Next, I’ll be taking the next step in my journey by starting a Specialist Diploma in AI Solutions this October. 
-                            I’m excited to keep learning and growing in this field that I’m passionate about.
+                            More recently, I completed the 42 Piscine on August 15, 2025—a challenging and intensive coding program that really pushed me to think critically and solve problems 
+                            creatively. Next, I'll be taking the next step in my journey by starting a Specialist Diploma in AI Solutions this October. 
+                            I'm excited to keep learning and growing in this field that I'm passionate about. While waiting for my course to start and for my job interview, 
+                            I am looking through online tutorials about Microsoft Azure and Apache Spark and refreshing some topics and tools like AWS, PowerBI that I learned in my poly modules.
                         </p>
                     </div>
                 </div>
