--- a/index.html
+++ b/index.html
@@ -332,9 +332,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4 ">Resume</h2>
                         <p class="text-white-50">
-                            <img src="assets/img/Professional%20Minimalist%20CV%20Resume.png" alt="..." style="margin-left: auto;margin-right: auto; display: block; width:50%; height: auto;" />
                         <h4>
-                             <a class="text-white-50" href="https://www.canva.com/design/DAGhqn1JGpM/DBbcny3gDcR-Ics4fdlSNQ/edit?utm_content=DAGhqn1JGpM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Resume</a>
+                             <a class="text-white-50" href="https://docs.google.com/document/d/1z58bOW8q_X_Me2h50Gl52W-S9NsXUqQo1YgFXY3HbXM/edit?usp=sharing" target="_blank">Resume</a>
                         </h4>
                         </p>
                     </div>
